[SELC-6113] feat: Added api /company/verify-legal to check if user is manager of given company on external registries

--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -8,6 +8,7 @@ swagger.onboarding.institutions.api.onboarding.getActiveOnboarding=The service r
 swagger.onboarding.institutions.api.onboarding=The service allows the onboarding of Users to an Institution
 swagger.onboarding.institutions.api.onboarding.subunit=The service allows the onboarding of Users to a subunit of an Institution
 swagger.onboarding.institutions.api.onboarding.verifyAggregatesCsv=The service allows to verify if the given csv contains valid aggregate institutions
+swagger.onboarding.institutions.api.onboarding.verifyManager= The service allows to verify the legal representative on external registries and retrieve the company name
 swagger.onboarding.institutions.api.onboarding.checkRecipientCode=The service allows to verify if recipientCode is valid or not
 swagger.onboarding.institutions.api.onboardingUsersPg=The service allows the onboarding of Users to a PG Institution
 swagger.onboarding.institutions.api.getInstitutionOnboardingInfo=The service retrieves the institutions Manager and institution informations
