--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -87,6 +87,7 @@ swagger.onboarding.model.status=Onboarding request's status
 swagger.onboarding.model.institutionInfo=Institution specific data
 swagger.onboarding.model.manager=Manager specific data. It's required when institutionType is not PT
 swagger.onboarding.model.reason=Onboarding request rejection reason
+swagger.onboarding.model.attachments=Onboarding's attachments
 swagger.onboarding.model.updateDate=Onboarding request update date
 swagger.onboarding.model.expiringDate=Onboarding request expiring date
 swagger.onboarding.model.admins=Administrators specific data
