--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -13,7 +13,7 @@ swagger.onboarding.institutions.api.onboarding.checkRecipientCode=The service al
 swagger.onboarding.institutions.api.onboardingUsersPg=The service allows the onboarding of Users to a PG Institution
 swagger.onboarding.institutions.api.getInstitutionOnboardingInfo=The service retrieves the institutions Manager and institution informations
 swagger.onboarding.institutions.api.getInstitutionGeographicTaxonomy=The service retrieve the institution's geographic taxonomy
-swagger.onboarding.institutions.api.getInstitutions=The service retrieves all the onboarded institutions related to the logged user
+swagger.onboarding.institutions.api.getInstitutions=The service retrieves all the onboarded institutions related to the logged user and product's identifier.  
 swagger.onboarding.institutions.api.getInstitutionData=The service retrieves the onboarded institution given its external id
 swagger.onboarding.institutions.api.verifyOnboarding=Checks if the specified institution has been onboarded on the specified product.
 swagger.onboarding.institutions.api.checkOrganization=Checks if an institution has been already registered on the products backoffice
