--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -13,6 +13,7 @@ swagger.onboarding.institutions.api.onboarding.verifyManager=The service allows 
 swagger.onboarding.institutions.api.onboarding.checkRecipientCode.summary=The service allows to verify if recipientCode is valid or not
 swagger.onboarding.institutions.api.onboarding.checkRecipientCode.description=The service allows to verify if recipientCode is valid or not
 swagger.onboarding.institutions.api.onboardingUsersPg=The service allows the onboarding of Users to a PG Institution
+swagger.onboarding.institutions.api.onboarding.checkRecipientCode=The service allows to verify if recipientCode is valid or not
 swagger.onboarding.institutions.api.getInstitutionOnboardingInfo=The service retrieves the institutions Manager and institution informations
 swagger.onboarding.institutions.api.getInstitutionGeographicTaxonomy=The service retrieve the institution's geographic taxonomy
 swagger.onboarding.institutions.api.getInstitutions=The service retrieves all the onboarded institutions related to the logged user and product's identifier.  
