--- a/web/src/main/resources/swagger/swagger_en.properties
+++ b/web/src/main/resources/swagger/swagger_en.properties
@@ -101,6 +101,7 @@ swagger.onboarding.user.api.validate=Check if requested user data are valid
 swagger.onboarding.users.api.onboarding=The service allows the onboarding of Users
 swagger.onboarding.users.api.onboarding-aggregator=The service allows the onboarding of Users for aggregators
 swagger.onboarding.users.api.check-manager=Returns true if current manager and previous one are the same
+swagger.onboarding.users.api.search-user=Returns uuid of specific user from PDV
 swagger.onboarding.user.model.id=User's unique identifier
 swagger.onboarding.user.model.surname=User's surname
 swagger.onboarding.user.model.name=User's name
